# vol-arb-engine

./: .gitignore  README.md  api_log.txt  app.py  dash_log.txt  run.sh
api/: main.py
backtest/: engine.py  metrics.py  position_manager.py  report.py
core/: breeden_litzenberger.py  iv_surface.py  local_vol.py  no_arb_checks.py  svi.py  vol_math.py
core/cpp/: CMakeLists.txt  bindings.cpp  black_scholes.cpp  black_scholes.h  iv_solver.cpp  iv_solver.h  svi_calibrator.cpp  svi_calibrator.h
data/fetchers/: yfinance_fetcher.py
data/storage/: duckdb_store.py
frontend/: frontend_log.txt  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
signals/: aggregator.py  skew_zscore.py  surface_mispricing.py  term_structure.py
